1.9.4:
* Support for native (P2WKH) segwit addresses, in bech32 format (work in progress)

1.9.3 - 2017-12-26
* Client: Removed a rare deadlock that could happen in network.AddB2G() on Mutex_net.Lock()
* Client: Fixed problem with returning the same command again by OneConnection.FetchMessage()
* Wallet: New command line switch "-stdin" to get the seed password from stdin
* Wallet: New command line switch "-txfn <filename>" to control the name of the output transaction file
* Client: Check nonce inside each version messages and disconnect the peer if already had it
* Client: Redone protection os accessing values in "common" package, to prevent data race
* Lib: "chain.BlockTreeEnd" is now only accessible through multi-thread protected methods LastBlock() and SetLast()
* Client: Added network.CompactBlocksMutex to prevent data race
* Client/WebUI/MakeTx: For privacy, randomly modify the default SPB by up to +/- 10%
* Client/WebUI/Network: Allows to edit "friends.txt" file
* Client: Data is being written to peer TCP connections from a desigated threads
* Client: And peer that you connect to manually, automatically gets marked as Special (no auto-dropping)
* Client: Automatically connect to IPs from file "friends.txt" (inside the client/ folder)
* Client/WebUI/MakeTx: Show P2SH-WPKH instead of P2KH, only if currently selected wallet contains "# Auto-translate to SegWit"
* Client/WebUI/MakeTx: Address Book shows auto calculated P2SH-WPKH Addresses from currently selected wallet
* Client: Show real endpoint's TCP port for incomming connections
* Client: Run Tick() method for each peer not more often than each 100 ms
* Client: Run SendInvs() method for each peer not more often each 10 ms
* Client: Increased size of each peer's send buffer to 16MB (so it can handle 8MB blocks)
* Client/TextUI: New command "unban"
* Client: Removed NO_DATA timeout and added NoVersionMessage timeout