@@ -8,7 +8,6 @@ import (
 	"bytes"
 	"errors"
 	"strings"
-	"runtime"
 	"sync/atomic"
 	"crypto/rand"
 	"encoding/hex"
@@ -54,33 +53,8 @@ const (
 )
 
 
-type MySyncMutex struct {   // TODO: remove this after ficing the rare hanging issue
-	sync.Mutex
-}
-
 var (
-	MutFile string
-	MutLine int
-	MutLock bool
-)
-
-
-func (m *MySyncMutex) Lock() {
-	m.Mutex.Lock()
-	MutLock = true
-	_, MutFile, MutLine, _ = runtime.Caller(1)
-}
-
-
-func (m *MySyncMutex) Unlock() {
-	_, MutFile, MutLine, _ = runtime.Caller(1)
-	MutLock = false
-	m.Mutex.Unlock()
-}
-
-
-var (
-	Mutex_net MySyncMutex
+	Mutex_net sync.Mutex
 	OpenCons map[uint64]*OneConnection = make(map[uint64]*OneConnection)
 	InConsActive, OutConsActive uint32
 	LastConnId uint32
