@@ -128,9 +128,9 @@ func MainThread() {
 func show_info(par string) {
 	common.Busy_mutex.Lock()
 	if common.BusyWith != "" {
-		fmt.Println("Chain thread busy with:", common.BusyWith, network.MutLock, network.MutFile, network.MutLine)
+		fmt.Println("Chain thread busy with:", common.BusyWith)
 	} else {
-		fmt.Println("Chain thread is idle", network.MutLock, network.MutFile, network.MutLine)
+		fmt.Println("Chain thread is idle")
 	}
 	common.Busy_mutex.Unlock()
 
