@@ -1,5 +1,6 @@
 1.9.4:
 * Support for native (P2WKH) segwit addresses, in bech32 format (work in progress)
+* Removed extra code added to investigate "the main loop got stuck in network.Tick()" problem (seems to be fixed now)
 
 1.9.3 - 2017-12-26
 * Client: Removed a rare deadlock that could happen in network.AddB2G() on Mutex_net.Lock()
